--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
         <small>
           &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
         </small>
+        <div style="float: right;"><small><a href="about">About</a></div></small>
       </footer>
     </div>
 
