--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -32,7 +32,8 @@ h4, h5, h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
-  font-size: 1rem;
+  font-size: 1em;
+  line-height: 1.5em;
 }
 
 strong {
