--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,6 +12,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+
 }
 
 html {
@@ -29,6 +30,7 @@ body {
   background-color: $body-bg;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+  line-height: 1.5rem;
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
