--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -12,7 +12,8 @@
   margin-top: 0;
   margin-bottom: 0;
   color: $gray-4;
-  font-size: 1.25rem;
+  font-size: 1rem;
+  text-decoration: uppercase;
 
   a {
     color: inherit;
