--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -79,7 +79,7 @@ blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
   color: #7a7a7a;
-  border-left: .1rem solid #e5e5e5;
+  border-left: 1px solid #e5e5e5;
 
   p:last-child {
     margin-bottom: 0;
