--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -77,7 +77,7 @@ abbr {
 
 blockquote {
   padding: .5rem 1rem;
-  margin: .8rem 0;
+  margin: .8rem 0 .8rem .5rem;
   color: #7a7a7a;
   border-left: 1px solid #e5e5e5;
 
