--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -12,19 +12,22 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 1.25rem;
   text-transform: uppercase;
-  font-weight: 600;
+  font-weight: normal;
+  font-family: "Gill Sans MT", "Gill Sans", "Gill Sans Std", Verdana, "Bitstream Vera Sans", sans-serif;
 }
 
 h2 {
   margin-top: 2.0rem;
-  font-size: 1.25rem;
-  font-weight: 400;
+  font-size: 1.15rem;
+  font-weight: 500;
+  font-family: "Gill Sans MT", "Gill Sans", "Gill Sans Std", Verdana, "Bitstream Vera Sans", sans-serif;
 }
 
 h3 {
   margin-top: 1.5rem;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
+  font-family: "Gill Sans MT", "Gill Sans", "Gill Sans Std", Verdana, "Bitstream Vera Sans", sans-serif;
 }
 
 h4, h5, h6 {
