--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -13,21 +13,21 @@ h1 {
   font-size: 1.35rem;
   text-transform: uppercase;
   font-weight: normal;
-  font-family: "Gill Sans MT", "Gill Sans", "Gill Sans Std", Verdana, "Bitstream Vera Sans", sans-serif;
+  font-family: "Helvetica", sans-serif;
 }
 
 h2 {
   margin-top: 2.0rem;
   font-size: 1.20rem;
   font-weight: 600;
-  font-family: "Gill Sans MT", "Gill Sans", "Gill Sans Std", Verdana, "Bitstream Vera Sans", sans-serif;
+  font-family: "Helvetica", sans-serif;
 }
 
 h3 {
   margin-top: 1.5rem;
   font-size: 1rem;
   font-weight: 600;
-  font-family: "Gill Sans MT", "Gill Sans", "Gill Sans Std", Verdana, "Bitstream Vera Sans", sans-serif;
+  font-family: "Helvetica", sans-serif;
 }
 
 h4, h5, h6 {
