--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,7 @@ $blue: #268bd2;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: 'Verdana', sans-serif;
+$root-font-family: 'Helvetica', sans-serif;
 $root-font-size: 14px;
 $root-line-height: 1.5;
 
