--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -10,9 +10,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 1.35rem;
+  font-size: 1.15rem;
   text-transform: uppercase;
-  font-weight: normal;
+  font-weight: strong;
   font-family: "Helvetica", sans-serif;
 }
 
